@@ -88,3 +88,6 @@ Changed the error message that appears when Webmin detects a link from another w
 Links from unknown referers are now blocked by default, to prevent XSS attacks. This may break browsers that don't supply a Referer: HTTP header.
 ---- Changes since 1.400 ----
 Big Czech translation updates, thanks to Petr Vanek and the Czech translation team.
+All popups in Webmin are now XSS-safe, and thus do not need protection from unknown referers which prevented them from working in some browsers.
+All Webmin session IDs are now stored MD5 hashed, to prevent sessions from being captured if the sessiondb DBM is somehow read by an attacker.
+Many Dutch updates, thanks to Gandyman.
